--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
 
 </head>
 <body>
-  <main>
-    Preview
-  
-    Gabrielle Essence Eau De Parfum
-  
-    A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-    Perfumer-Creator for the House of CHANEL.
-  
-    $149.99
-    $169.99
-  
-    Add to Cart
+  <main class="wrapper">
+    <div class="container">
+      <h4>Perfume</h4>
+    
+      <h1>Gabrielle Essence Eau De Parfum</h1>
+    
+      A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+      Perfumer-Creator for the House of CHANEL.
+      <div class="prices">
+        <p class="sale-price">$149.99</p>
+        <p class="old-price">$169.99</p>
+      </div>
+      <button>
+        Add to Cart
+      </button>
+    </div>
   </main>
-
-  
 </body>
 </html>
