testing media queries with desktop size

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <main class="wrapper">
     <div class="container">
       <div class="image-container">
+        <img src="/images/image-product-desktop.jpg" alt="" class="perfume-image-desktop">
         <img src="/images/image-product-mobile.jpg" alt="perfume bottle" class="perfume-image-mobile">
       </div>
       <div class="text-container">
